# ComfyGen

./: .gitignore  README.md  pyproject.toml  run.bat  run.sh
docs/superpowers/plans/: 2026-07-18-comfygen-cli-implementation.md
docs/superpowers/specs/: 2026-07-18-comfygen-cli-design.md
src/comfygen/: __main__.py  catalog.py  comfy_client.py  config.py  device_compatibility.py  device_detect.py  models.py  node_schema.py  ui.py  vram_filter.py  workflow_editor.py
tests/: test_catalog.py  test_comfy_client.py  test_config.py  test_device_compatibility.py  test_device_detect.py  test_models.py  test_node_schema.py  test_vram_filter.py  test_workflow_editor.py
