[project]
name = "comfygen"
version = "0.1.0"
description = "CLI-помощник для генерации в ComfyUI"
authors = [
    { name = "Levon Osipov", email = "osipoff.levon@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
