[project]
name = "comfygen"
version = "0.3.1"
description = "CLI-помощник для генерации в ComfyUI"
authors = [
    { name = "Levon Osipov", email = "osipoff.levon@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "questionary>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
comfygen = "comfygen.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfygen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
